fixed button vertical spacing

--- a/other/main.css
+++ b/other/main.css
@@ -167,6 +167,7 @@ body {
 
 .download-links {
   display: flex;
+  gap: 7px;
   justify-content: flex-start;
   margin-top: 1em;
 }
@@ -248,6 +249,7 @@ body {
 .nav-group-left,
 .nav-group-right {
   display: flex;
+  gap: 7px;
 }
 
 .nav-button {
